--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
     "name": "calculator",
     "version": "0.1.0",
-    "homepage": "http://saransh-283.github.io/calculator",
+    "homepage": "http://saransh-283.github.io/calculator-react",
     "private": true,
     "dependencies": {
+        "@babel/core": "^7.14.3",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "jquery": "^3.6.0",
         "node-sass": "4.14.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
